# betfair_data

./: .gitignore  Cargo.toml  README  README.md  betfair_data.pyi  pyproject.toml
.env/: pyvenv.cfg
.github/workflows/: CI.yml  build.yml  release.yml
betfair_data/: __init__.py  betfair_data.pyi  bflw.pyi
py_src/: async.py  json2csv.py  main.py
py_src/benchmarks/: betfair_data_bench.py  betfair_data_bflwcompat.py  betfair_data_immut.py  betfair_data_mut.py  betfairlightweight.py  bfd_bench.py  bfdbflw_bench.py  bflw_bench.py
py_src/json2csv/: json2csv_bflw_pysrc.py  json2csv_bflw_rustsrc.py  p_j2csv_bflw_with_opt.prof  p_j2csv_bflw_without_opt.prof  p_py_src.prof  p_rust_src.prof
py_src/test/: bfd_mut_test.py  bflw_test.py
src/: config.rs  datetime.rs  deser.rs  enums.rs  errors.rs  file.rs  file_iter.rs  files.rs  files_source.rs  ids.rs  lib.rs  market.rs  market_source.rs  price_size.rs  py_rep.rs  runner.rs  source_iter.rs  strings.rs  tarbz2_source.rs
src/api/: error.rs  login.rs  mod.rs  stream.rs  stream_types.rs
src/bflw/: adapter.rs  config.rs  datetime.rs  file.rs  file_iter.rs  float_str.rs  gen.rs  iter.rs  market_book.rs  market_definition.rs  market_definition_runner.rs  mod.rs  runner_book.rs  runner_book_ex.rs  runner_book_sp.rs
src/immutable/: adapter.rs  config.rs  container.rs  datetime.rs  definition.rs  file.rs  file_iter.rs  iter.rs  market.rs  mod.rs  price_size.rs  runner.rs  runner_book_ex.rs  runner_book_sp.rs
src/mutable/: adapter.rs  config.rs  definition.rs  file.rs  file_iter.rs  iter.rs  market.rs  mod.rs  price_size.rs  runner.rs  runner_book_ex.rs  runner_book_sp.rs
