[build-system]
requires = ["maturin>=0.12,<=0.15"]
build-backend = "maturin"

[project]
name = "betfair_data"
requires-python = ">=3.7"
version = "0.3.0"
description = "Fast Python Betfair historic data file parser"
authors = [ {name = "Robert Tarbath", email = "rtarbath@gmail.com"} ]
license = {file = "LICENSE"}

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
homepage = "https://github.com/tarb/betfair_data"
repository = "https://github.com/tarb/betfair_data"
